adds certificate upload
