# manufacturer/dtoMappers.go
@@ -5,6 +5,7 @@ import (
 	"github.com/MrDweller/digital-twin-hub/models"
 	sensoranomalyhandler "github.com/MrDweller/digital-twin-hub/sensor-anomaly-handler"
 	serviceModels "github.com/MrDweller/service-registry-connection/models"
+	"github.com/google/uuid"
 )
 
 func mapDigitalTwinDtoToDigitalTwinModel(digitalTwinDTO DigitalTwinDTO, additionalServices []additionalservice.AdditionalService) models.DigitalTwinModel {
@@ -16,7 +17,11 @@ func mapDigitalTwinDtoToDigitalTwinModel(digitalTwinDTO DigitalTwinDTO, addition
 
 	}
 
+	certificateId, _ := uuid.Parse(digitalTwinDTO.CertificateId)
+
 	return models.DigitalTwinModel{
+		CertificateId: certificateId,
+
 		SensedProperties:        mapSensedPropertiesDtoToSensedPropertiesModel(digitalTwinDTO.SensedProperties),
 		ControlCommands:         mapControllCommandsDtoToControllCommandsModel(digitalTwinDTO.ControlCommands),
 		AdditionalServiceModels: additionalServiceModels,
